--- a/common/common.scss
+++ b/common/common.scss
@@ -4,7 +4,7 @@
 .d-editor-button-bar .btn .d-icon:hover,
 .btn.ok .d-icon, .btn.ok .d-icon:hover,
 .d-editor-button-bar .btn .no-text .btn-icon .composer_insert_button {
- color: var(--success-low);
+ color: var(--success-low) !important;
 }
 
 
