--- a/common/common.scss
+++ b/common/common.scss
@@ -4,9 +4,11 @@
 .d-editor-button-bar .btn .d-icon:hover,
 .btn.ok .d-icon, .btn.ok .d-icon:hover,
 */
-.d-editor-button-bar .btn .no-text .btn-icon .composer_insert_button {
+
+.d-editor-button-bar .btn .no-text .btn-icon .composer_insert_button svg.fa .d-icon .d-icon-highlighter .svg-icon .svg-string {
  color: var(--success-low) !important;
 }
+
 
 
 // * insert background color override * //
