--- a/common/common.scss
+++ b/common/common.scss
@@ -7,6 +7,7 @@
 
 .d-editor-button-bar button.btn.no-text.btn-icon.composer_insert_button svg.fa.d-icon.d-icon-highlighter.svg-icon.svg-string {
  color: var(--success-low) !important;
+ border-bottom: 1px solid var(--current-color) !important;
 }
 
 
