--- a/common/common.scss
+++ b/common/common.scss
@@ -4,17 +4,26 @@
 .d-editor-button-bar .btn .d-icon:hover,
 .btn.ok .d-icon, .btn.ok .d-icon:hover,
 */
-
+/*
 .d-editor-button-bar button.btn.no-text.btn-icon.composer_insert_button svg.fa.d-icon.d-icon-highlighter.svg-icon.svg-string {
  color: var(--success-low) !important;
  border-bottom: 1px solid var(--primary-medium) !important;
 }
+*/
 
 
 
 // * insert background color override * //
 
 @if $insert_background_color_override !="" {
+
+
+.d-editor-button-bar button.btn.no-text.btn-icon.composer_insert_button svg.fa.d-icon.d-icon-highlighter.svg-icon.svg-string {
+ color: $insert_background_color_override;
+ border-bottom: 1px solid var(--primary-medium) !important;
+}
+
+ 
 
   .cooked,
   .d-editor-preview {
@@ -27,6 +36,12 @@
 }
 
 @else {
+
+
+ .d-editor-button-bar button.btn.no-text.btn-icon.composer_insert_button svg.fa.d-icon.d-icon-highlighter.svg-icon.svg-string {
+ color: var(--success-low) !important;
+ border-bottom: 1px solid var(--primary-medium) !important;
+}
 
   .cooked,
   .d-editor-preview {
