--- a/common/common.scss
+++ b/common/common.scss
@@ -2,7 +2,7 @@
 
 @if $insert_background_color_override !="" {
 
-  button.btn.no-text.btn-icon.composer_insert_button svg.fa.d-icon.d-icon-highlighter.svg-icon.svg-string {
+  button.btn.no-text.btn-icon.composer_insert_button {
     color: $insert_background_color_override;
     border-bottom: 1px solid var(--primary-medium) !important;
   }
@@ -19,7 +19,7 @@
 
 @else {
 
-  button.btn.no-text.btn-icon.composer_insert_button svg.fa.d-icon.d-icon-highlighter.svg-icon.svg-string {
+  button.btn.no-text.btn-icon.composer_insert_button {
     color: var(--success-low) !important;
     border-bottom: 1px solid var(--primary-medium) !important;
   }
