--- a/common/common.scss
+++ b/common/common.scss
@@ -1,10 +1,13 @@
 // * insert background color override * //
 
+button.btn.no-text.btn-icon.composer_insert_button svg.fa.d-icon.d-icon-highlighter.svg-icon.svg-string {
+    border-bottom: 1px solid var(--primary-medium) !important;
+}
+
 @if $insert_background_color_override !="" {
 
   button.btn.no-text.btn-icon.composer_insert_button {
     color: $insert_background_color_override;
-    border-bottom: 1px solid var(--primary-medium) !important;
   }
 
   .cooked,
@@ -21,7 +24,6 @@
 
   button.btn.no-text.btn-icon.composer_insert_button {
     color: var(--success-low) !important;
-    border-bottom: 1px solid var(--primary-medium) !important;
   }
  
   .cooked,
