--- a/common/common.scss
+++ b/common/common.scss
@@ -1,6 +1,6 @@
 // * insert background color override * //
 
-button.btn.no-text.btn-icon.composer_insert_button svg.fa.d-icon.d-icon-highlighter.svg-icon.svg-string {
+button.btn.no-text.btn-icon.composer_insert_button svg.fa.d-icon.d-icon-highlighter {
     border-bottom: 2px solid var(--primary-medium) !important;
 }
 
