--- a/common/common.scss
+++ b/common/common.scss
@@ -3,7 +3,7 @@
 button.btn.no-text.btn-icon.composer_insert_button svg.fa.d-icon.d-icon-highlighter:after {
     /* border-bottom: 2px solid var(--primary-medium) !important; */
   position: absolute;
-  content: "-----";
+  content: "______";
   color: var(--primary-medium);
   font-weight: 700;
   font-size: 1.7em;
