--- a/common/common.scss
+++ b/common/common.scss
@@ -6,12 +6,11 @@ button.btn.no-text.btn-icon.composer_insert_button svg.fa.d-icon.d-icon-highligh
 
 button.btn.no-text.btn-icon.composer_insert_button:after {
   position: absolute;
-  content: "----";
+  content: "_";
   color: var(--primary-medium);
-  font-weight: 700;
+/*  font-weight: 700;
   font-size: 1.7em;
-  left: 7px;
-  top: -10px;
+    */
 }
 
 @if $insert_background_color_override !="" {
