--- a/common/common.scss
+++ b/common/common.scss
@@ -6,11 +6,9 @@ button.btn.no-text.btn-icon.composer_insert_button svg.fa.d-icon.d-icon-highligh
 
 button.btn.no-text.btn-icon.composer_insert_button:after {
   position: absolute;
-  content: "_";
+  content: "__";
   color: var(--primary-medium);
-/*  font-weight: 700;
-  font-size: 1.7em;
-    */
+  padding-bottom: 15px;
 }
 
 @if $insert_background_color_override !="" {
