--- a/common/common.scss
+++ b/common/common.scss
@@ -3,14 +3,16 @@
 button.btn.no-text.btn-icon.composer_inserted_button:after {
   position: absolute;
   content: "__";
-  color: var(--primary-medium);
+  color: var(--primary);
   /* padding-bottom: 15px; */
 }
 
 @if $inserted_background_color_override !="" {
 
   button.btn.no-text.btn-icon.composer_inserted_button {
-    color: $inserted_background_color_override;
+    background-color: $inserted_background_color_override !important;
+    box-shadow: inset 0 0 0 5px var(--secondary);
+    border: none;
   }
 
   .cooked,
@@ -26,7 +28,9 @@ button.btn.no-text.btn-icon.composer_inserted_button:after {
 @else {
 
   button.btn.no-text.btn-icon.composer_inserted_button {
-    color: var(--success-low) !important;
+    background-color: var(--success-low) !important;
+    box-shadow: inset 0 0 0 5px var(--secondary);
+    border: none;
   }
  
   .cooked,
