--- a/common/common.scss
+++ b/common/common.scss
@@ -10,6 +10,7 @@ button.btn.no-text.btn-icon.composer_inserted_button:after {
 @if $inserted_background_color_override !="" {
 
   button.btn.no-text.btn-icon.composer_inserted_button {
+    color: var(--primary);
     background-color: $inserted_background_color_override !important;
     box-shadow: inset 0 0 0 5px var(--secondary);
     border: none;
