--- a/common/common.scss
+++ b/common/common.scss
@@ -13,6 +13,7 @@ button.btn.no-text.btn-icon.composer_inserted_button:after {
     color: var(--primary);
     background-color: $inserted_background_color_override;
     box-shadow: inset 0 0 0 5px var(--secondary);
+    border-radius: 10px;
     border: none;
   }
 
@@ -32,6 +33,7 @@ button.btn.no-text.btn-icon.composer_inserted_button:after {
     color: var(--primary);
     background-color: var(--success-low);
     box-shadow: inset 0 0 0 5px var(--secondary);
+    border-radius: 10px;
     border: none;
   }
  
